chore:  language and jdk upgrade
refactor(smells): reduce code complexity

chore: remove unused config

TIS21-7129: Use Person ID to create a placement against